# aries_autonomy

./: .gitignore  README.md  analyze_bucket_pivots.py  analyze_gripper_stls.py  calculate_fourbar_multiplier.py  find_mounting_holes.py
src/aries/: CMakeLists.txt
src/aries/config/: gazebo_bridge.yaml  xbox.config.yaml
src/aries/launch/: display.launch.xml  my_robot.launch.xml
src/aries/meshes/gripper/: gripper_base.stl  gripper_bucket.stl  gripper_gear_left.stl  gripper_link_left.stl
src/aries/rviz/: display_config.rviz
src/aries/scripts/: teleop_keyboard.py  waypoint_follower.py
src/aries/urdf/: aries_gazebo.xacro  arm.xacro  common_properties.xacro  gripper_new.xacro  igus_rebel2.urdf  igus_rebel_robot2.urdf.xacro  left_link.xacro  my_robot.urdf.xacro  right_link.xacro
src/aries/worlds/: mars_terrain.sdf
src/aries_moveit/: .setup_assistant  package.xml
src/aries_moveit/config/: aries.ros2_control.xacro  aries.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/pure_pursuit_controller/: package.xml  setup.py
src/pure_pursuit_controller/pure_pursuit_controller/: imu_odom_validator.py  path_generator.py  pure_pursuit_node.py
