cmake_minimum_required(VERSION 3.8)
project(aries)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

install(
  DIRECTORY urdf launch config meshes rviz models worlds sdf igus_rebel_description
  DESTINATION share/${PROJECT_NAME}/
)






install(PROGRAMS
  scripts/virtual_differential
  scripts/waypoint_follower.py
  DESTINATION lib/${PROJECT_NAME}
)


ament_package()
